[tool.poetry]
name = "fastnn"
version = "0.1.0"
description = "A python library and framework for fast neural network computations."
authors = ["Andrew Chang <aychang995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^3.0.0"
jupyter = "^1.0.0"
jupyterlab = "^2.2.9"
wget = "^3.2"
matplotlib = "^3.3.3"
coremltools = "^4.0"
torch = {version = "1.*", optional = true}
torchvision = {version = "0.*", optional = true}
mkdocs = {version = "^1.1.2", optional = true}
mkdocs-material = {version = "^6.1.5", optional = true}
mkautodoc = {version =  "^0.1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.poetry.extras]
torch = ["torch", "torchvision"]
docs = ["mkdocs", "mkdocs-material", "mkautodoc"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
