[tool.poetry]
name = "fastnn"
version = "0.4.0"
description = "A python library and framework for fast neural network computations."
authors = ["Andrew Chang <aychang995@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://andrewchang.dev/fastnn/"
repository = "https://github.com/aychang95/fastnn"
documentation = "https://andrewchang.dev/fastnn/"


[tool.poetry.dependencies]
python = "^3.9, <3.12"
wget = "^3.2"
transformers = "^4.34.1"
optimum = "^1.13.2"
auto-gptq = "^0.4.2"
accelerate = "^0.24.1"
tritonclient = {extras = ["all"], version = "^2.39.0"}
sentence-transformers = "^2.2.2"
torch = {version = "2.0.0", optional = true}
torchvision = {version = "0.*", optional = true}
torchaudio = {version = "2.*", optional = true}
jupyter = {version = "^1.0.0", optional = true}
jupyterlab = {version = "^4.0.7", optional = true}
matplotlib = {version="^3.8.0", optional = true}
coremltools = {version="^7.0", optional = true}
mkdocs = {version = "^1.5.3", optional = true}
mkdocs-material = {version = "^9.4.7", optional = true}
mkdocstrings = {version = "^0.18.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.10.1"

[tool.poetry.extras]
torch = ["torch", "torchvision"]
jupyter = ["jupyter", "jupyterlab", "matplotlib"]
ios = ["coremltools"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
